# coinbot

./: .env.example  .gitignore  PRD.md  README.md  RUNBOOK.md  TODO.md  pyproject.toml
deploy/: coinbot.service  logrotate-coinbot
docs/: INTEGRATION.md  LATENCY_BASELINE.md  shadow-tracking-playbook.md  source-wallet-strategy-hypothesis.md
scripts/: benchmark-latency.sh  copy-agreement-rollup.py  daily-rollup.py  live-paper.sh  shadow-hourly-rollup.py  startup-check.sh  tale-of-tape.py
src/coinbot/: config.py  main.py  schemas.py
src/coinbot/decision_engine/: coalescer.py  kill_switch.py  policy.py
src/coinbot/executor/: dry_run.py  market_cache.py  order_client.py
src/coinbot/state_store/: checkpoints.py  dedupe.py
src/coinbot/telemetry/: alerts.py  copy_audit.py  exporter.py  logging.py  metrics.py  pnl.py  redaction.py  shadow.py
src/coinbot/watcher/: source_activity.py  source_ws.py  ws_client.py
tests/: test_integration_flows.py  test_kill_switch.py  test_market_cache.py  test_metrics.py  test_order_client.py  test_pnl.py  test_policy.py  test_recovery.py
