[project]
name = "coinbot"
version = "0.1.0"
description = "Latency-focused Polymarket copy trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "websockets>=12.0",
  "py-clob-client>=0.20.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
